examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-node-tagger
  labels:
    app: k8s-node-tagger
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: metrics
      port: 8081
      targetPort: metrics
  selector:
    app: k8s-node-tagger
